--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,180 +1,38 @@
-##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  < 
-#  \__|_| |_| |_|\__,_/_/\_\
-#
-#############################
-#
-# COPY AND PASTE
-# http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
-#
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-#
-############################################################################
-############################################################################
-# Reset Prefix
-############################################################################
-#set -g prefix C-a
-#bind-key a send-prefix # for nested tmux sessions
-
-############################################################################
-# Global options
-############################################################################
-# large history
-set-option -g history-limit 10000
-
-# colors
-setw -g mode-bg black
-set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
-set-option -g pane-active-border-fg green
-
-# utf8 support
-#set-window-option -g utf8 on
-
-
-# basic settings
-set-window-option -g xterm-keys on # for vim
-set-window-option -g mode-keys vi # vi key
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-fg white
-setw -g window-status-current-attr reverse
-
-# Automatically set window title
-#setw -g automatic-rename
-
-# use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-#setw -g mode-mouse on
-#setw -g mouse-resize-pane on
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# vi movement keys
-# set-option -g status-keys vi
-
-############################################################################
-# Status Bar
-############################################################################
-#set-option -g status-utf8 on
-set-option -g status-justify left
-set-option -g status-bg black # colour213 # pink
-set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]'
-set-option -g status-right '#[fg=red,bold] #[fg=cyan]»» #[fg=blue,bold]#S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
-set-option -g visual-activity on
-
-# Titles (window number, program name, active (or not)
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
-
-
-############################################################################
-# Unbindings
-############################################################################
-#unbind [ # copy mode bound to escape key
-#unbind j
-#unbind C-b # unbind default leader key
-#unbind '"' # unbind horizontal split
-#unbind %   # unbind vertical split
-
-
-############################################################################
-# Bindings
-############################################################################
-# reload tmux conf
-bind-key r source-file ~/.tmux.conf
-
-#bind Escape copy-mode
-
-# new split in current pane (horizontal / vertical)
-#bind-key - split-window -v # split pane horizontally
-#bind-key \ split-window -h # split pane vertically
-
-# list panes
-#bind-key Space list-panes
-
-# break-pane
-#bind-key Enter break-pane
-
-# join-pane [-dhv] [-l size | -p percentage] [-s src-pane]
-# [-t:dst-window.dst-pane] (destination window (dot) destination pane
-#                (alias: joinp)
-#
-#bind C-j command-prompt "joinp"
-#bind C-j command-prompt "join-pane"
-#bind-key j command-prompt "join-pane -s '%%'"
-#bind-key j command-prompt "joinp -t:0"
-#bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
-
-#previous pane
-bind-key -n C-up prev
-bind-key -n C-left prev
-
-#next pane
-bind-key -n C-right next
-bind-key -n C-down next
-
-############################################################################
-# windows
-############################################################################
-set-window-option -g window-status-current-bg red
-bind C-j previous-window
-bind C-k next-window
-bind-key C-a last-window # C-a C-a for last active window
-bind A command-prompt "rename-window %%"
-# By default, all windows in a session are constrained to the size of the 
-# smallest client connected to that session, 
-# even if both clients are looking at different windows. 
-# It seems that in this particular case, Screen has the better default 
-# where a window is only constrained in size if a smaller client 
-# is actively looking at it.
-setw -g aggressive-resize on
-
-############################################################################
-# panes
-############################################################################
-# Navigation ---------------------------------------------------------------
-# use the vim motion keys to move between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# smart pane switching with awareness of vim splits
+bind-key h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind-key j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind-key k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind-key l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Resizing ---------------------------------------------------------------
-bind-key C-h resize-pane -L 10
-bind-key C-j resize-pane -D 10
-bind-key C-k resize-pane -U 10
-bind-key C-l resize-pane -R 10
-
-
-############################################################################
-# layouts
-############################################################################
-bind o select-layout "active-only"
-bind M-- select-layout "even-vertical"
-bind M-| select-layout "even-horizontal"
-bind M-r rotate-window
-
-#set -g default-shell $SHELL 
-#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
-# focus on first window
-# select-window -t 0
+bind-key C-h resize-pane -L 5
+bind-key C-j resize-pane -D 5 
+bind-key C-k resize-pane -U 5
+bind-key C-l resize-pane -R 5
+setw -g aggressive-resize on
 
 #bind-key c command-prompt -p "Name of new window: " "new-window -n '%%'"
-#bind '"' split-window -c "#{pane_current_path}"
-#bind % split-window -h -c "#{pane_current_path}"
-#bind c new-window -c "#{pane_current_path}"
+bind o select-layout "active-only"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/block/cyan'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
